objects/IND_Default_Event_Lead_Recipient__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>used to determine a default event lead owner for Industrial event leads</description>
    <fields>
        <fullName>Event_ID__c</fullName>
        <description>holds the ID of the Campaign</description>
        <inlineHelpText>holds the ID of the Campaign</inlineHelpText>
        <label>Event ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_name__c</fullName>
        <description>the name of the campaign</description>
        <label>Event name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_ID__c</fullName>
        <description>Salesforce ID of the dedicated lead recipient</description>
        <label>Recipient ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_name__c</fullName>
        <description>name of the dedicated lead recipient</description>
        <label>Recipient name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IND Default Event Lead Recipient</label>
</CustomObject>